Fixed horizontal scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ nav ul li a:hover {
 .button {
 	display:inline;
 	position:fixed;
-	right: 10px;
+	right: 20px;
 	top:6px;
 	z-index:999;
 	font-size:30px;
